fixed width and overflow issues. made background lighter gray

--- a/src/components/homePage/homePageStyles/boosters.css
+++ b/src/components/homePage/homePageStyles/boosters.css
@@ -11,7 +11,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background-color: rgb(220, 220, 220);
+	background-color: rgb(240, 240, 240);
 	font-family: Arial, Helvetica, sans-serif;
 }
 
